--- a/index.html
+++ b/index.html
@@ -192,34 +192,19 @@
           <h2 class="suggestions__title">Чем мы занимаемся</h2>
           <ul class="suggestions__list">
             <li class="suggestions__item">
-              <img
-                src="./images/box1.jpg"
-                width="370"
-                height="294"
-                alt="Пальцы рук на клавиатуре перед монитором"
-              />
+              <img src="./images/box1.jpg" width="370" height="294" alt="Член команды" />
               <div class="suggestions__overlay">
                 <h3 class="suggestions__text">Десктопные приложения</h3>
               </div>
             </li>
             <li class="suggestions__item">
-              <img
-                src="./images/box2.jpg"
-                width="370"
-                height="294"
-                alt="Человек держит телефон одной рукой, другой работает на ноутбуке"
-              />
+              <img src="./images/box2.jpg" width="370" height="294" alt="Член команды" />
               <div class="suggestions__overlay">
                 <h3 class="suggestions__text">Мобильные приложения</h3>
               </div>
             </li>
             <li class="suggestions__item">
-              <img
-                src="./images/box3.jpg"
-                width="370"
-                height="294"
-                alt="Руки человека держат планшет, на котором отображается цветовая палитра"
-              />
+              <img src="./images/box3.jpg" width="370" height="294" alt="Член команды" />
               <div class="suggestions__overlay">
                 <h3 class="suggestions__text">Дизайнерские решения</h3>
               </div>
@@ -235,7 +220,7 @@
             <li class="teammate__item">
               <img
                 src="./images/i.jpg"
-                alt="член команды"
+                alt="Игорь Демьяненко"
                 srcset="
                   ./images/teammate/igor-270.jpg    270w,
                   ./images/teammate/igor-354.jpg    354w,
@@ -285,7 +270,7 @@
             <li class="teammate__item">
               <img
                 src="./images/o.jpg"
-                alt="член команды"
+                alt="Ольга Репина"
                 srcset="
                   ./images/teammate/olga-270.jpg    270w,
                   ./images/teammate/olga-354.jpg    354w,
@@ -335,7 +320,7 @@
             <li class="teammate__item">
               <img
                 src="./images/n.jpg"
-                alt="член команды"
+                alt="Николай Тарасов"
                 srcset="
                   ./images/teammate/nik-270.jpg    270w,
                   ./images/teammate/nik-354.jpg    354w,
@@ -385,7 +370,7 @@
             <li class="teammate__item">
               <img
                 src="./images/m.jpg"
-                alt="член команды"
+                alt="Михаил Ермаков"
                 srcset="
                   ./images/teammate/mix-270.jpg    270w,
                   ./images/teammate/mix-354.jpg    354w,
