--- a/portfolio.html
+++ b/portfolio.html
@@ -117,7 +117,7 @@
                     "
                     sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                     src="./images/portfolio/2.jpg"
-                    alt="два баскетболиста"
+                    alt="Баскетбол"
                   />
                   <div class="portfolio__overlay">
                     <p class="portfolio__text">
@@ -148,7 +148,7 @@
                     "
                     sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                     src="./images/portfolio/3.jpg"
-                    alt="логотип ресторана"
+                    alt="Ресторан"
                   />
                   <div class="portfolio__overlay">
                     <p class="portfolio__text">
@@ -179,7 +179,7 @@
                     "
                     sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                     src="./images/portfolio/4.jpg"
-                    alt="наушники"
+                    alt="Наушники"
                   />
                   <div class="portfolio__overlay">
                     <p class="portfolio__text">
@@ -210,7 +210,7 @@
                     "
                     sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                     src="./images/portfolio/5.jpg"
-                    alt="две коробки"
+                    alt="Коробки"
                   />
                   <div class="portfolio__overlay">
                     <p class="portfolio__text">
@@ -241,7 +241,7 @@
                     "
                     sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                     src="./images/portfolio/6.jpg"
-                    alt="компьютер"
+                    alt="Монитор"
                   />
                   <div class="portfolio__overlay">
                     <p class="portfolio__text">
@@ -272,7 +272,7 @@
                     "
                     sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                     src="./images/portfolio/7.jpg"
-                    alt="журнал"
+                    alt="Дизайн"
                   />
                   <div class="portfolio__overlay">
                     <p class="portfolio__text">
@@ -303,7 +303,7 @@
                     "
                     sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                     src="./images/portfolio/8.jpg"
-                    alt="ярлык с тесемкой"
+                    alt="Бирка"
                   />
                   <div class="portfolio__overlay">
                     <p class="portfolio__text">
@@ -334,7 +334,7 @@
                     "
                     sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                     src="./images/portfolio/9.jpg"
-                    alt="руки, печатающие на ноутбуке"
+                    alt="Ноутбук"
                   />
                   <div class="portfolio__overlay">
                     <p class="portfolio__text">
